update splitting of data fields considering double quote